# blog

./: .env.dev  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy_pipeline.yml  pr_pipeline.yaml
blog/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
blog/management/commands/: set_group_permissions.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20240620_0309.py
plusone/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
